# CppBuffer

./: CMakeLists.txt  Clean.sh  Make.sh  README.md
sources/: Buffer.cpp  Buffer.hpp  main.cpp
