project(Buffer)
cmake_minimum_required(VERSION 3.10)
if (UNIX)
    add_definitions("-Wall -Werror -Wshadow -Wdouble-promotion -Wundef -Wconversion -Wextra -fPIC -Wnon-virtual-dtor -Wuninitialized -Wunreachable-code")
endif (UNIX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB_RECURSE SOURCES_FILES ${PROJECT_SOURCE_DIR}/sources/*.hpp ${PROJECT_SOURCE_DIR}/sources/*.cpp)
add_library(Buffer STATIC ${SOURCES_FILES})
target_include_directories(Buffer PUBLIC ${PROJECT_SOURCE_DIR}/sources/)
